11.0.5
------
(RB=970594)
Fix StreamExecutionCallback.EventLoopConnector race condition.

11.0.4
------
(RB=966768)
Fix FileClassNameScanner to ignore hidden dot-files.

11.0.3
------
(RB=959468)
Provide a utility to perform semantic equality comparison for two pegasus objects.

(RB=958964)
Change the quarantine health checking latency to use degrader low latency

11.0.2
------
(RB=956032)
Move schema logic from constructor to method for BatchKVResponse for performance.
Moving the logic around creating the BatchKVResponse schema to the schema() method and pulling some variables into constants for efficiency gains since schema is inaccurate and rarely used in this class.

11.0.1
------
(RB=957811)
Make RestLiDataValidator aware of wilcard for projecting Union members.

11.0.0
-------
Major version bump due to backward incompatible changes introduced in 10.1.13.
(RB=957738)
Add note to BatchEntityResponse explaining the backward incompatible change to DataMap format returned by data() method.

10.1.15  (Note: This version is not backward compatible. See 11.0.0)
-------
(RB=951527)
Fix one of ResponseDataBuilderUtil helper methods to return the correct ResponseEnvelope type and re-enabled unit tests which weren't running.

10.1.14  (Note: This version is not backward compatible. See 11.0.0)
-------
(RB=948921)
Extract interface from RestClient and add a DisruptRestClient decorator class

10.1.13  (Note: This version is not backward compatible. See 11.0.0)
-------
(RB=949067)
Refactor batch_get response conversion to entity response code into BatchKVResponse to be consistent with other decoder behavior.

(RB=947745)
Make 'optional' fields more explicit in .pdl grammar

10.1.12
------
(RB=948600)
Disable TranslateSchemas task in pegasus plugin. It was incorrectly being enabled for all source sets.

10.1.11
------
(RB=940808)
Add gradle task to translate .pdsc to .pdl
(RB=945938)
Increase d2 quarantine pre-check retry times


10.1.10
------
(RB=945616)