@@ -2,6 +2,8 @@
 ------
 (RB=970594)
 Fix StreamExecutionCallback.EventLoopConnector race condition.
+(RB=973958)
+Remove deprecated << operator in PegasusPlugin.
 
 11.0.4
 ------
